--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,6 +6,7 @@
     <title>Base HTML File</title>
 </head>
 <body>
+    <a href="tweets.html"></a>
     <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"></a>
     <h1>Welcome to My First Portfolio</h1>
     <p>This is a basic and valid HTML file.</p>
