--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,18 +6,39 @@
     <title>Base HTML File</title>
 </head>
 <body>
-    <a href="tweets.html"></a>
-    <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"></a>
-    <h1>Welcome to My First Portfolio</h1>
-    <p>This is a basic and valid HTML file.</p>
-    <p>The first paragraph can look like this</p>
-    <p>This is a third paragraph</p>
-    <p>The paragraph can also look like this</p>
+    <header>
+        <nav>
+        <ul>
+            <li>
+                <a href="tweets.html"></a>
+            </li>
+        </ul>
+        </nav>
+    </header>
+    <main>
+        <article>
+            <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"></a>
+            <h1>Welcome to My First Portfolio</h1>
+            <p>This is a basic and valid HTML file.</p>
+            <p>The first paragraph can look like this</p>
+            <p>This is a third paragraph</p>
+            <p>The paragraph can also look like this</p>
+            <h2>This is an example to show how a second title looks like</h2>
+            <h3>A third heading will look like this you can place it here</h3>
+        </article>
 
-    <h2>This is an example to show how a second title looks like</h2>
-    <h3>A third heading will look like this you can place it here</h3>
+        <aside>
+            <p>Place holder to add comment thread later</p>
+        </aside>
 
-    <p>This is an image</p>
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="This image was given by ALX">
+    
+        <p>This is an image</p>
+        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="This image was given by ALX">
+    </main>
+
+
+    <footer>
+        <p>Made by Michael Nyokonyo - <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" target="_blank">here</a></p>
+    </footer>
 </body>
 </html>
