--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -10,14 +10,13 @@
         <nav>
         <ul>
             <li>
-                <a href="tweets.html"></a>
+                <a href="tweets.html">Tweets</a>
             </li>
         </ul>
         </nav>
     </header>
     <main>
         <article>
-            <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"></a>
             <h1>Welcome to My First Portfolio</h1>
             <p>This is a basic and valid HTML file.</p>
             <p>The first paragraph can look like this</p>
@@ -28,7 +27,7 @@
         </article>
 
         <aside>
-            <p>Place holder to add comment thread later</p>
+            <p>Placeholder to add comment thread later</p>
         </aside>
 
     
