--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -10,7 +10,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="index.html"></a>
+                    <a href="index.html">Home</a>
                 </li>
             </ul>
         </nav>
@@ -19,7 +19,6 @@
     <main>
         <article>
             <a href="index.html"></a>
-            <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png"></a>
             <h1>Welcome to My First Portfolio</h1>
             <p>This is a basic and valid HTML file.</p>
             <p>The first paragraph can look like this</p>
@@ -35,7 +34,7 @@
         </article>
 
         <aside>
-            <p>Place holder to add comment thread later</p>
+            <p>Placeholder to add comment thread later</p>
         </aside>
     </main>
 
