--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -18,19 +18,29 @@
 
     <main>
         <article>
-            <a href="index.html"></a>
             <h1>Welcome to My First Portfolio</h1>
             <p>This is a basic and valid HTML file.</p>
-            <p>The first paragraph can look like this</p>
-            <p>This is a third paragraph</p>
-            <p>The paragraph can also look like this</p>   
+            <p>The first paragraph can look like this.</p>
+            <p>This is a third paragraph.</p>
+            <p>The paragraph can also look like this.</p>
+
             <h2>Look at this tweet</h2>
-            <a href="<blockquote class="twitter-tweet"><p lang="en" dir="ltr">My name is Wallace Chege Munyiri, a graduand of Bachelor of Anatomy, in the Faculty of Health Sciences.The human heart beats an average of 100,000 beats per day, but today, mine might double that — it’s racing faster than ever standing here!<br>I am deeply humbled and thankful to be… <a href="https://t.co/i3md1sTeI2">pic.twitter.com/i3md1sTeI2</a></p>&mdash; University of Nairobi (@uonbi) <a href="https://twitter.com/uonbi/status/1867443366868156848?ref_src=twsrc%5Etfw">December 13, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>"></a>
-        
-            <h3>A third heading will look like this you can place it here</h3>
-        
-            <p>This is an image</p>
-            <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="This image was given by ALX">     
+            <blockquote class="twitter-tweet">
+                <p lang="en" dir="ltr">
+                    My name is Wallace Chege Munyiri, a graduand of Bachelor of Anatomy, in the Faculty of Health Sciences.
+                    The human heart beats an average of 100,000 beats per day, but today, mine might double that — it’s racing faster than ever standing here!<br>
+                    I am deeply humbled and thankful to be… 
+                    <a href="https://t.co/i3md1sTeI2">pic.twitter.com/i3md1sTeI2</a>
+                </p>
+                &mdash; University of Nairobi (@uonbi) 
+                <a href="https://twitter.com/uonbi/status/1867443366868156848?ref_src=twsrc%5Etfw">December 13, 2024</a>
+            </blockquote>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+            <h3>A third heading will look like this. You can place it here</h3>
+
+            <p>This is an image:</p>
+            <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="This image was given by ALX">
         </article>
 
         <aside>
@@ -39,7 +49,9 @@
     </main>
 
     <footer>
-        <p>Made by Michael Nyokonyo - <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" target="_blank">here</a></p>
+        <p>Made by Michael Nyokonyo - 
+            <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" target="_blank">here</a>
+        </p>
     </footer>
 </body>
 </html>
