--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -44,7 +44,7 @@
         </article>
 
         <aside>
-            <p>Placeholder to add comment thread later</p>
+            <p>placeholder to add comment thread later</p>
         </aside>
     </main>
 
