--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -25,13 +25,14 @@
             <p>The paragraph can also look like this.</p>
 
             <h2>Look at this tweet</h2>
-                <p>
-                    My name is Wallace Chege Munyiri, a graduand of Bachelor of Anatomy, in the Faculty of Health Sciences.
-                    The human heart beats an average of 100,000 beats per day, but today, mine might double that — it’s racing faster than ever standing here!<br>
-                    I am deeply humbled and thankful to be… 
-                    <a href="https://t.co/i3md1sTeI2">pic.twitter.com/i3md1sTeI2</a>
-                </p>
-                <a href="https://twitter.com/uonbi/status/1867443366868156848?ref_src=twsrc%5Etfw">December 13, 2024</a>
+            <p>
+                My name is Wallace Chege Munyiri, a graduand of Bachelor of Anatomy, in the Faculty of Health Sciences. 
+                The human heart beats an average of 100,000 beats per day, but today, mine might double that — 
+                it’s racing faster than ever standing here!<br>
+                I am deeply humbled and thankful to be… 
+                <a href="https://twitter.com/uonbi/status/1867443366868156848">See more here</a>
+            </p>
+
             <h3>A third heading will look like this. You can place it here</h3>
 
             <p>This is an image:</p>
@@ -39,7 +40,7 @@
         </article>
 
         <aside>
-            <p>placeholder to add comment thread later</p>
+            <p>Placeholder to add comment thread later</p>
         </aside>
     </main>
 
