--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -3,40 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Base HTML File</title>
+    <title>Tweets</title>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
+                <li><a href="index.html">Home</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <article>
-            <h1>Welcome to My First Portfolio</h1>
-            <p>This is a basic and valid HTML file.</p>
-            <p>The first paragraph can look like this.</p>
-            <p>This is a third paragraph.</p>
-            <p>The paragraph can also look like this.</p>
-
-            <h2>Look at this tweet</h2>
-            <p>
+            <h1>Embedded Tweet</h1>
+            <p>Here is a tweet to showcase in this article:</p>
+            <div class="twitter-tweet">
                 My name is Wallace Chege Munyiri, a graduand of Bachelor of Anatomy, in the Faculty of Health Sciences. 
                 The human heart beats an average of 100,000 beats per day, but today, mine might double that — 
                 it’s racing faster than ever standing here!<br>
                 I am deeply humbled and thankful to be… 
-                <a href="https://twitter.com/uonbi/status/1867443366868156848">See more here</a>
-            </p>
-
-            <h3>A third heading will look like this. You can place it here</h3>
-
-            <p>This is an image:</p>
-            <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="This image was given by ALX">
+                <a href="https://twitter.com/uonbi/status/1867443366868156848">View Tweet</a>
+            </div>
         </article>
 
         <aside>
