--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -18,24 +18,23 @@
         <article>
             <h1>Embedded Tweet</h1>
             <p>Here is a tweet to showcase in this article:</p>
-            <div class="twitter-tweet">
+            <p>
                 My name is Wallace Chege Munyiri, a graduand of Bachelor of Anatomy, in the Faculty of Health Sciences. 
                 The human heart beats an average of 100,000 beats per day, but today, mine might double that — 
                 it’s racing faster than ever standing here!<br>
                 I am deeply humbled and thankful to be… 
                 <a href="https://twitter.com/uonbi/status/1867443366868156848">View Tweet</a>
-            </div>
+            </p>
+
         </article>
 
         <aside>
-            <p>Placeholder to add comment thread later</p>
+            <p>placeholder to add comment thread later</p>
         </aside>
     </main>
 
     <footer>
-        <p>Made by Michael Nyokonyo - 
-            <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" target="_blank">here</a>
-        </p>
+        <p>Made by Michael Nyokonyo - <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" target="_blank">here</a></p>
     </footer>
 </body>
 </html>
