--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -23,9 +23,8 @@
                 The human heart beats an average of 100,000 beats per day, but today, mine might double that — 
                 it’s racing faster than ever standing here!<br>
                 I am deeply humbled and thankful to be… 
-                <a href="https://twitter.com/uonbi/status/1867443366868156848">View Tweet</a>
             </p>
-
+            <a href="<blockquote class="twitter-tweet"><p lang="en" dir="ltr">My name is Wallace Chege Munyiri, a graduand of Bachelor of Anatomy, in the Faculty of Health Sciences.The human heart beats an average of 100,000 beats per day, but today, mine might double that — it’s racing faster than ever standing here!<br>I am deeply humbled and thankful to be… <a href="https://t.co/i3md1sTeI2">pic.twitter.com/i3md1sTeI2</a></p>&mdash; University of Nairobi (@uonbi) <a href="https://twitter.com/uonbi/status/1867443366868156848?ref_src=twsrc%5Etfw">December 13, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>"></a>
         </article>
 
         <aside>
